add in test task some params