@@ -20,11 +20,21 @@ dependencies {
 }
 
 test {
+    
+//    https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html
+    
     dependsOn(clean)
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
     }
+    
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
 }
 
 wrapper {
